--- a/_includes/description.html
+++ b/_includes/description.html
@@ -114,12 +114,13 @@
                             </a>
                         </div>
                         <p class="card-score">Score: ${ fellow.total }
-                        <span class="card-score-breakdown">
-                        Commits: ${fellow.commits}<br>
-                        Pull requests: ${fellow.pullRequests}<br>
-                        Issues: ${fellow.issues}<br>
-                        Comments: ${fellow.comments}<br>
-                        </span></p>
+                            <span class="card-score-breakdown">
+                                Commits: ${fellow.commits}<br>
+                                Pull requests: ${fellow.pullRequests}<br>
+                                Issues: ${fellow.issues}<br>
+                                Comments: ${fellow.comments}<br>
+                            </span>
+                        </p>
                     </div>
                 </div>
                 `
