--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -56,9 +56,10 @@ h2 {
   margin: 20px 30px;
   background-color: #e9e9f3;
   border-radius: 0.375rem;
-  padding: 1.5em;
+  padding: 1em;
   font-size: 1.2em;
 }
+
 .card img {
   max-width: 100%;
   border-radius: .15rem;
@@ -140,20 +141,23 @@ a {
     .github-link {
       margin-top: 20px;
       display: block;
+    }  
+  }
+
+  .icon {
+    margin-top: 20px;
+  
+    flex-wrap: wrap;
+    flex-direction: column;
+    display: flexbox;
+  
+    .social-link-icon {
+      width: 8%;
+      height: 8%;
     }
-}
+  
+    a {
+      padding-right: 2px;
+    }
 
-.icon {
-  flex-wrap: wrap;
-  flex-direction: column;
-  display: flexbox;
-
-  .social-link-icon {
-    width: 8%;
-    height: 8%;
   }
-
-  a {
-    padding-right: 2px;
-  }
-}
