hide comments counter and update css
Changes:
- Hide comments counter from tool tip
- update css to prevent the map from jumping in and out while the cards
are loading

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -145,7 +145,7 @@
                                 Commits: ${fellow.commits}<br>
                                 Pull requests: ${fellow.pullRequests}<br>
                                 Issues: ${fellow.issues}<br>
-                                Comments: ${fellow.comments}<br>
+                                <!-- Comments: ${fellow.comments}<br> -->
                             </span>
                         </p>
                     </div>
