--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -12,6 +12,7 @@
   grid-template-columns: repeat(4, 1fr);
   font-family: 'Open Sans', sans-serif;
   margin-bottom: 50px;
+  min-height: 600px;
 }
 
 @media only screen and (max-width: 1500px) {
