--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -157,3 +157,29 @@ a {
     padding-right: 2px;
   }
 }
+
+.scrollToTopBtn {
+  cursor: pointer;
+  
+  position: fixed;
+  bottom: 70px;
+  right: 30px;
+  width: 48px;
+  
+  z-index: 1005;
+  
+  opacity: 0;
+  
+  transform: translateY(100px);
+  transition: all .5s ease;
+  
+  text-align: center;
+  font-size: 16px;
+  line-height: 48px;
+  text-decoration: none;
+}
+
+.showScrollToTopBtn {
+  opacity: 1;
+  transform: translateY(0)
+}
