--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -171,6 +171,7 @@ hr {
 
 .title-with-image {
     .icon {
+        margin-top: 5px;
         .social-link-icon {
             width: 30px;
             margin-top: -10px;
