--- a/_includes/description.html
+++ b/_includes/description.html
@@ -1,5 +1,5 @@
 <h2>Meet the Pod</h2>
-<div id="members" class="profile-card-container">
+<div id="members" class="card-container profile-card-container">
     <script>
         // A helper function to get data from github API
         async function getData(url) {
@@ -83,11 +83,11 @@
             // extract github usernames from fellows.yml
             {% for item in site.data.fellows %} 
                 fellows.push({
-                    github: "https://github.com/{{ item.github }}",
+                    github: ("{{ item.github }}") ? "https://github.com/{{ item.github }}" : null,
                     name: "{{ item.name }}",
                     location: "{{ item.location }}",
-                    linkedin: "https://www.linkedin.com/in/{{ item.linkedin }}",
-                    twitter: "https://twitter.com/{{ item.twitter }}",
+                    linkedin: ("{{ item.linkedin }}") ? "https://www.linkedin.com/in/{{ item.linkedin }}" : null,
+                    twitter: ("{{ item.twitter }}") ? "https://twitter.com/{{ item.twitter }}" : null,
                     resume: "{{ item.resume }}",
                     commits: 0,
                     pullRequests: 0,
@@ -140,7 +140,7 @@
                                 <i class="fab fa-linkedin-in fa-lg" style="color: #0A66C2;"></i>
                             </a>
                         </div>
-                        <p class="card-score">Score: ${ fellow.total }
+                        <p class="card-score">Score: ${fellow.total}
                             <span class="card-score-breakdown">
                                 Commits: ${fellow.commits}<br>
                                 Pull requests: ${fellow.pullRequests}<br>
