--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -15,9 +15,6 @@
 }
 
 .profile-card-container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  font-family: 'Open Sans', sans-serif;
   margin-bottom: 50px;
   min-height: 600px;
 }
@@ -69,10 +66,15 @@ h2 {
   font-size: 1.2em;
 }
 
-.card img {
+.card .social-link-icon {
   max-width: 100%;
   border-radius: .15rem;
   margin-top: -10px;
+}
+
+.card img {
+  max-width: 100%;
+  border-radius: .15rem;
 }
 
 .card:hover {
@@ -85,8 +87,8 @@ h2 {
   width: 70px;
   height: 70px;
   position: absolute;
-  right: -30px;
-  top: -30px;
+  right: -35px;
+  top: -35px;
   transform: rotate(45deg);
 }
 
@@ -105,17 +107,18 @@ h2 {
   background-color: rgb(75, 75, 75);
   color: #fff;
   
-  width: 110px;
+  width: fit-content;
   padding: 5px;
   
   font-size: 70%;
+  white-space: nowrap;
   text-align: left;
   
   border-radius: 6px;
 
   position: absolute;
   top: 100%;
-  left: 0%;
+  right: 0%;
   margin-top: 5px;
   z-index: 2;
 }
