Fix relative links for Github Pages

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -122,7 +122,7 @@
                 <div class="card">
                     <div class="info">
                         ${img}
-                        <a href="/fellows/${fellow.name.replace(/ /g, '-')}">
+                        <a href="fellows/${fellow.name.replace(/ /g, '-').toLowerCase()}">
                             <p class="title"> ${ fellow.name }</p>
                             <p class="location"> ${ fellow.location }</p>
                         <a>
