--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
       <div class="card">
         <div class="info">
           {% if item.page-name %}
-          <a href="/projects/{{ item.page-name }}">
+          <a href="projects/{{ item.page-name }}">
           {% else %}
           <a>
           {% endif %}
@@ -13,7 +13,7 @@
           </a>
           <p class="owner">By 
             <span class="owner-name">
-              <a href="/fellows/{{ item.owner-page }}">
+              <a href="fellows/{{ item.owner-page }}">
                 {{ item.owner }}
               </a>
             </span>
