Fix more relative links

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <header class="nav-bar">
     <div class="nav-content">
-        <a href="{{ '/' | relative_url }}">
+        <a href="{{ './' | relative_url }}">
             <div class="nav-logo fade-in">
                 <img src="./assets/img/mlh-prep.png" />
             </div>
