--- a/_layouts/fellows.html
+++ b/_layouts/fellows.html
@@ -5,8 +5,8 @@ layout: defaultInner
 <div class="banner">
     <div class="container">
         <div class="logo">
-            <a href="/">
-                <img src="/assets/img/logo.svg"/>
+            <a href="../">
+                <img src="../assets/img/logo.svg"/>
             </a>
         </div>
         <div class="title-with-image">
