Add 2nd project to score

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -100,6 +100,7 @@
             
             const repos = [
                 {owner: "MLH-Fellowship", name: "prep-portfolio-22.AUG.PREP.2"},
+                {owner: "MLH-Fellowship", name: "prep-project-22.AUG.PREP.2"}
             ]
             
             for (repo of repos) {
@@ -134,7 +135,7 @@
                                 <i class="fab fa-twitter fa-lg" style="color: #1DA1F2;"></i>                
                             </a>
                             <a ${(!fellow.resume) ? "hidden" : ""} href=${fellow.resume} target="_blank">
-                                <img class="social-link-icon" src="../assets/img/icons/resume.png">
+                                <img class="social-link-icon" src="assets/img/icons/resume.png">
                             </a>
                             <a ${(!fellow.linkedin) ? "hidden" : ""} href=${fellow.linkedin}>
                                 <i class="fab fa-linkedin-in fa-lg" style="color: #0A66C2;"></i>
