--- a/_layouts/fellows.html
+++ b/_layouts/fellows.html
@@ -18,18 +18,26 @@ layout: defaultInner
                     {{page.title}}
                 </div>
                 <div class="icon">
-                    <a href=https://github.com/${fellow.github} target="_blank">
+                    {% if page.github %}
+                    <a href=https://github.com/{{page.github}} target="_blank">
                         <i class="fab fa-github fa-lg"></i>                    
                     </a>
-                    <a href=https://twitter.com/${fellow.twitter} target="_blank">
+                    {% endif %}
+                    {% if page.twitter %}
+                    <a href=https://twitter.com/{{page.twitter}} target="_blank">
                         <i class="fab fa-twitter fa-lg"></i>                
                     </a>
-                    <a href=${fellow.resume} target="_blank">
+                    {% endif %}
+                    {% if page.resume %}
+                    <a href='{{page.resume}}' target="_blank">
                         <img class="social-link-icon" src="../assets/img/icons/resume.png">
                     </a>
-                    <a href=https://www.linkedin.com/in/${fellow.linkedin}>
+                    {% endif %}
+                    {% if page.linkedin %}
+                    <a href='https://www.linkedin.com/in/{{page.linkedin}}' target="_blank">
                         <i class="fab fa-linkedin-in fa-lg"></i>
                     </a>
+                    {% endif %}
                 </div>
             </div>
         </div>
