--- a/_includes/headerInnerPages.html
+++ b/_includes/headerInnerPages.html
@@ -2,9 +2,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:title" content="Personal Portfolio">
-    <meta property="og:description" content="My Personal Portfolio">
-    <meta property="og:image" content="./assets/img/social-link.jpg">
+    <meta property="og:title" content="Hack2gether's Portfolio">
+    <meta property="og:description" content="Hack2gether's Pod Portfolio showcasing each member of this amazing MLH Prep pod.">
+    <meta property="og:image" content="../assets/img/social-link.jpg">
     <meta property="og:url" content="{{ page.url }}">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
