Added target='_blank' for linkedin links

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -137,7 +137,7 @@
                             <a ${(!fellow.resume) ? "hidden" : ""} href=${fellow.resume} target="_blank">
                                 <img class="social-link-icon" src="assets/img/icons/resume.png">
                             </a>
-                            <a ${(!fellow.linkedin) ? "hidden" : ""} href=${fellow.linkedin}>
+                            <a ${(!fellow.linkedin) ? "hidden" : ""} href=${fellow.linkedin} target="_blank">
                                 <i class="fab fa-linkedin-in fa-lg" style="color: #0A66C2;"></i>
                             </a>
                         </div>
