Added projects from the pod members

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,7 +8,7 @@
           {% else %}
           <a>
           {% endif %}
-            <img src="./assets/img/{{ item.img }}">
+            <img src="./assets/img/projects/{{ item.img }}" class="project-img">
             <p class="title">{{ item.title }}</p>
           </a>
           <p class="owner">By 
