--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -72,9 +72,11 @@ h2 {
   margin-top: -10px;
 }
 
-.card img {
+.project-img {
   max-width: 100%;
   border-radius: .15rem;
+  height: 300px;
+  object-fit: contain;
 }
 
 .card:hover {
