Fix link to the blog page

--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -3,7 +3,7 @@
     {% for item in site.data.blog %}
 
     {% if item.page-name %}
-    <a href="/blogs/{{ item.page-name }}">
+    <a href="blogs/{{ item.page-name }}">
         {% else %}
         <a>
             {% endif %}
