--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -2,18 +2,27 @@
   class="profile"
   id="profile"
   style="
-    background: url('./assets/img/mlhblue.png');
-    background-size: cover;
+    background: url('./assets/img/terminal.png');
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
   "
 >
-  <div class="profile-picture">
+  <!-- <div class="profile-picture">
     {% for item in site.data.fellows %}
     <div class="profile-pic-container" title={{item.name}}>
       <img src="./assets/img/{{ item.img }}" />
     </div>
     {% endfor %}
-  </div>
-  <h1 class="site-title">{{ site.title }}</h1>
+  </div> -->
+  <h1 class="site-title" style="
+  position:relative;
+  text-align: center;
+  justify-content: center;
+  top: 100px;
+
+  ">
+    {{ site.title }}
+  </h1>
+
 </div>
