--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -57,7 +57,8 @@ h2 {
 
 .card {
   display: flex;
-  flex-direction: row;
+  text-align: center;
+  flex-direction: column;
   align-items: center;
   margin: 20px 30px;
   background-color: #e9e9f3;
@@ -96,11 +97,12 @@ h2 {
 
 .card-score {
   position: absolute;
-  right: 10px;
-  top: 60%;
+  right: 30px;
+  top: 10%;
   background-color: #bbb;
   border-radius: 5px;
-  padding: 1px 3px;
+  padding: 3px 6px;
+  margin-top: 10px;
 }
 
 .card-score .card-score-breakdown {
@@ -135,16 +137,47 @@ a {
 }
 
 .info {
-
+  display: flex;
+  text-align: center;
+  flex-direction: column;
     p {
         margin-top: 5px;
         margin: 0px;
         text-align: left;
     }
 
-    .title {
-        font-size: 500;
-        font-weight: bold;
+    .profile-container {
+      display: inline;
+    
+      .profile-picture-container {
+        border-radius: 50%;
+        width: 150px;
+        height: 150px;
+        overflow: hidden;
+        position: relative;
+        display: inline-block;
+        margin-right: 10px;
+        
+        .profile-picture {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          overflow: hidden;
+        }
+      }
+      .profile-text-container {
+
+        .title {
+            font-size: 500;
+            font-weight: bold;
+        }
+        .location {
+          font-size: medium;
+          font-weight: 400;
+          margin-bottom: 2px;
+        }
+
+      }
     }
 
     .owner {
