Fixed profile pictures path

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -126,7 +126,7 @@
                         ${img}
                         <div class="profile-container">
                           <div class="profile-picture-container">
-                            <img class="profile-picture" src="../assets/img/${fellow.picture}" />
+                            <img class="profile-picture" src="assets/img/${fellow.picture}" />
                           </div>
                           <div class="profile-text-container">
                             <a href="fellows/${fellow.name.replace(/ /g, '-').toLowerCase()}">
