--- a/_includes/headerInnerPages.html
+++ b/_includes/headerInnerPages.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:title" content="Hack2gether's Portfolio">
     <meta property="og:description" content="Hack2gether's Pod Portfolio showcasing each member of this amazing MLH Prep pod.">
-    <meta property="og:image" content="../assets/img/social-link.jpg">
+    <meta property="og:image" content="../1assets/img/social-link.jpg">
     <meta property="og:url" content="{{ page.url }}">
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
