--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -55,6 +55,12 @@ h2 {
   text-align: center;
 }
 
+#error-inner {
+  text-align: center;
+  background-color: pink;
+  padding: 20px;
+}
+
 .card {
   display: flex;
   text-align: center;
