--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,10 +2,27 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- HTML Meta Tags -->
+    <meta name="description" content="Hack2gether's Pod Portfolio showcasing each member of this amazing MLH Prep pod.">
+  
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="{{ page.url }}">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="Hack2gether's Portfolio">
     <meta property="og:description" content="Hack2gether's Pod Portfolio showcasing each member of this amazing MLH Prep pod.">
-    <meta property="og:image" content="assets/img/social-link.jpg">
-    <meta property="og:url" content="{{ page.url }}">
+    <meta property="og:image" content="https://mlh-fellowship.github.io/prep-portfolio-22.AUG.PREP.2/assets/img/social-link.jpg">
+  
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="mlh-fellowship.github.io">
+    <meta property="twitter:url" content="https://mlh-fellowship.github.io/prep-portfolio-22.AUG.PREP.2/">
+    <meta name="twitter:title" content="Hack2gether's Portfolio">
+    <meta name="twitter:description" content="Hack2gether's Pod Portfolio showcasing each member of this amazing MLH Prep pod.">
+    <meta name="twitter:image" content="https://mlh-fellowship.github.io/prep-portfolio-22.AUG.PREP.2/assets/img/social-link.jpg">
+  
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+          
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
