update error message

--- a/_includes/description.html
+++ b/_includes/description.html
@@ -121,7 +121,7 @@
             let lock = 3;
             if(error) {
                 let errorDiv = document.getElementById('error')
-                errorDiv.innerHTML += '<div id="error-inner">Error fetching the scores: API Limit Reached. Try refreshing the page after 1 minute.</div>'
+                errorDiv.innerHTML += '<div id="error-inner">Error fetching the scores: API Limit Reached. Try refreshing the page.</div>'
             }
 
             for (const fellow of fellows) {
